--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pylint==2.4.4
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
 pyparsing==2.4.6
+pyTelegramBotAPI==3.6.6
 pytest==5.2.4
 python-crfsuite==0.9.6
 python-dateutil==2.8.1
